<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        >

    <ImageView
            android:src="@drawable/splash_logo"
            android:contentDescription="@string/imgContentDecp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/imageView"/>

    <EditText
            android:id="@+id/userName"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/colorDesp"
            android:inputType="textPersonName"
            android:padding="20dp"
            tools:ignore="TextFields"
            android:background="@drawable/login_signup_bg"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="145dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:id="@+id/emailID"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/emailID"
            android:textColorHint="@color/colorDesp"
            android:inputType="textPersonName"
            android:padding="20dp"
            tools:ignore="TextFields"
            android:background="@drawable/login_signup_bg"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/userName"/>
    <EditText
            android:id="@+id/passCode"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorDesp"
            android:inputType="textPersonName"
            android:padding="20dp"
            tools:ignore="TextFields"
            android:background="@drawable/login_signup_bg"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailID"/>
    <Button
            android:text="Create Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:background="@drawable/login_btn"
            android:textStyle="bold" android:textColor="@color/colorAccent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/passCode" android:padding="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:text="@string/haveAccount"
            android:textColor="@color/colorAccent" android:textSize="14sp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/passCode" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button"/>

</android.support.constraint.ConstraintLayout>