<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:id="@+id/email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/colorDesp"
            android:inputType="textPersonName"
            android:padding="20dp"
            tools:ignore="TextFields"
            android:textColor="@color/colorAccent"
            android:background="@drawable/login_signup_bg"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="272dp"
            app:layout_constraintTop_toTopOf="parent"
    />
    <EditText
            android:id="@+id/passCode"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorDesp"
            android:inputType="textPassword"
            android:padding="20dp"
            tools:ignore="TextFields"
            android:textColor="@color/colorAccent"
            android:background="@drawable/login_signup_bg"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email"/>

    <Button
            android:id="@+id/loginBtn"
            android:background="@drawable/login_btn"
            android:text="@string/loginBtn"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/passCode"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/passCode"/>

    <TextView
            android:id="@+id/haveAC"
            android:text="@string/askAccount"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/loginBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/passCode"
            app:layout_constraintHorizontal_bias="0.233"/>
    <ImageView
            android:layout_width="177dp"
            android:layout_height="175dp" app:srcCompat="@drawable/splash_logo"
            android:id="@+id/imageView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/email" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>